# HLivePusher

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/hubing/hlivepusher/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Log.h  native-lib.cpp
app/src/main/java/com/hubing/hlivepusher/: MainActivity.java
app/src/main/java/com/hubing/hlivepusher/params/: AudioParams.java  VideoParams.java
app/src/main/java/com/hubing/hlivepusher/pusher/: AudioPusher.java  LivePusher.java  PushNative.java  Pusher.java  VideoPusher.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hubing/hlivepusher/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
